Replace awkward Map population with Map.of()