@@ -4,8 +4,6 @@ import edu.illinois.library.cantaloupe.image.Dimension;
 import edu.illinois.library.cantaloupe.image.ScaleConstraint;
 import edu.illinois.library.cantaloupe.util.StringUtils;
 
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.Map;
 
 /**
@@ -130,10 +128,9 @@ public class Rotate implements Operation {
     @Override
     public Map<String,Object> toMap(Dimension fullSize,
                                     ScaleConstraint scaleConstraint) {
-        final Map<String,Object> map = new HashMap<>();
-        map.put("class", getClass().getSimpleName());
-        map.put("degrees", getDegrees());
-        return Collections.unmodifiableMap(map);
+        return Map.of(
+                "class", getClass().getSimpleName(),
+                "degrees", getDegrees());
     }
 
     /**
